k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $(APP_NAME)
  namespace: $(NAMESPACE)
spec:
  selector:
    app: $(APP_NAME)
  ports:
    - port: 80
      targetPort: 80
